<resources>
    <string name="app_name">My Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="recover_password">Recover Password</string>
</resources>
